[package]
name = "finne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1", features = ["serde"]}
mio = {version = "0.8", features = ["os-ext", "os-poll", "net"]}
httparse = "1.8.0"
slab = "0.4.8"
rusqlite = { version = "0.29.0", features = ["bundled"] }
object-pool = "0.5.4"

