[package]
name = "finne"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = {version = "1", features = ["serde"]}
clap = { version = "4.3", features = ["derive"] }
httparse = "1.8.0"
mio = {version = "0.8", features = ["os-ext", "os-poll", "net"]}
object-pool = "0.5.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0.96"
slab = "0.4.8"
