[package]
name = "finne_single_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = {version = "1", features = ["serde"]}
clap = { version = "4.3", features = ["derive"] }
mio = {version = "0.8", features = ["os-ext", "os-poll", "net"]}
nom = "7.1"
object-pool = "0.5"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4.8"

finne_parser = { path = "../parser" }
