[package]
name = "finne_single_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = {version = "1", features = ["serde"]}
clap = { version = "4.5", features = ["derive"] }
mio = {version = "1.0.3", features = ["os-ext", "os-poll", "net"]}
object-pool = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"

finne_parser = { path = "../parser" }
