[package]
name = "finne_tokio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
bytes = {version = "1", features = ["serde"]}
clap = { version = "4.5", features = ["derive"] }
mio = {version = "0.8", features = ["os-ext", "os-poll", "net"]}
nom = "7.1"
object-pool = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"

finne_parser = { path = "../parser" }
